plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.9ithon'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // === Spring Boot 스타터 의존성 ===

    // Spring Web (Controller, RestController 등 웹 어플리케이션 기본 구성)
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // Spring Data JPA (ORM, Repository 등 DB 연동 기능 제공)
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // === Spring Security 관련 의존성 ===
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'

    // JWT (JSON Web Token) 관련 라이브러리
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    // OAuth2 클라이언트 (소셜 로그인 등 외부 인증 제공자와의 연동)
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // === API 문서화 및 유효성 검사 ===

    // Swagger(OpenAPI) 문서 자동 생성
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'

    // Hibernate Validator (Bean Validation을 위한 의존성)
    implementation 'org.hibernate.validator:hibernate-validator'


    // === DB 드라이버 ===

    // PostgreSQL 드라이버 (JPA와 연동되는 실DB 연결용)
    runtimeOnly 'org.postgresql:postgresql'


    // === Google Cloud 관련 의존성 ===

    // Google Cloud Speech-to-Text (음성 인식)
    implementation 'com.google.cloud:google-cloud-speech:4.31.0'

    // websocket (실시간 통신을 위한 의존성)
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // === 개발 편의성 ===

    // Lombok (코드 자동 생성 - getter/setter 등)
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // 개발 중 핫 리로딩 지원 (자동 재시작)
    developmentOnly 'org.springframework.boot:spring-boot-devtools'


    // === 테스트 의존성 ===

    // Spring Boot 테스트 기능 (JUnit, MockMvc 등 포함)
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    // Querydsl (JPA 쿼리 빌더)
    implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
}

clean {
    delete file('src/main/generated')
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.named('bootJar') {
    mainClass = 'com._ithon.speeksee.SpeekseeApplication'
}
